--- a/AppProject/app/src/main/res/values/strings.xml
+++ b/AppProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AppCompatActivity</string>
+    <string name="app_name">Chamadas mais frequentes</string>
 </resources>
